tests/ext/valid/ConstrainedInt_Valid_3.whiley
// this is a comment!
define cr3nat as int where $ < 10

cr3nat f(cr3nat x):
    return 1

void System::main([string] args):
    y = f(9)
    this.out.println(str(y))
